<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.magwas</groupId>
	<artifactId>konveyor-parent-base</artifactId>
	<version>0.0.1</version>
	<packaging>pom</packaging>
	<name>${project.artifactId}-${project.version}</name>
	<description>
		Parent pom base (without dependency to konveyor-base) for Kode Konveyor
		toolchain
	</description>
	<url>https://repo.kodekonveyor.com/${project.artifactId}</url>
	<issueManagement>
		<system>github</system>
		<url>https://github.com/magwas/pmdrules.git</url>
	</issueManagement>
	<scm>
		<connection>scm:git:https://github.com/magwas/pmdrules.git</connection>
		<developerConnection>scm:git:https://github.com/magwas/pmdrules.git</developerConnection>
		<url>https://github.com/magwas/pmdrules.git</url>
	</scm>
	<developers>
		<developer>
			<name>Árpád Magosányi</name>
			<email>m4gw4s@gmail.com</email>
		</developer>
	</developers>
	<licenses>
		<license>
			<name>GPL affero</name>
			<url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
			<comments>GNU Affero General Public License</comments>
		</license>
	</licenses>
	<distributionManagement>
		<site>
			<id>website</id>
			<name>Project site</name>
			<url>https://repo.kodekonveyor.com/${project.artifactId}</url>
		</site>
	</distributionManagement>

	<properties>
		<konveyor.uploadRsyncURI>
			server:/var/www/repository/${project.artifactId}/${project.version}</konveyor.uploadRsyncURI>
		<project.encoding>UTF-8</project.encoding>
		<project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
		<jdk.version>21</jdk.version>
		<jdk.full.version>JavaSE-${jdk.version}</jdk.full.version>
		<maven.compiler.release>${jdk.version}</maven.compiler.release>
		<maven.compiler.source>${jdk.version}</maven.compiler.source>
		<maven.compiler.target>${jdk.version}</maven.compiler.target>
		<maven.compiler.fork>true</maven.compiler.fork>
		<maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
		<junit-version>5.12.1</junit-version>
		<tycho-version>4.0.12</tycho-version>
		<tycho.localArtifacts>ignore</tycho.localArtifacts>
		<spring-version>6.2.11</spring-version>
		<spring-boot-version>3.5.3</spring-boot-version>
		<spring-data-version>3.5.2</spring-data-version>
		<konveyor-version>${project.version}</konveyor-version>
		<maven.site.deploy.skip>true</maven.site.deploy.skip>
		<maven-version>3.9.11</maven-version>
	</properties>


	<modules>
		<module>konveyor-base</module>
		<module>konveyor-parent</module>
		<module>konveyor-base-testing</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit-version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit-version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<version>1.12.1</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.pmd</groupId>
			<artifactId>pmd-java</artifactId>
			<version>7.17.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-commons</artifactId>
			<version>${spring-data-version}</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.18.0</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.46.1</version>
				<configuration>
					<java>
						<palantirJavaFormat>
							<version>2.74.0</version>
						</palantirJavaFormat>
						<importOrder>
							<order>\#,java,javax,org,com,,</order>
						</importOrder>
						<indent>
							<tabs>true</tabs>
							<spacesPerTab>4</spacesPerTab>
						</indent>
						<formatAnnotations/>
						<removeUnusedImports/>
						<cleanthat>
							<version>2.24</version>
							<sourceJdk>${jdk.version}</sourceJdk>
							<includeDraft>true</includeDraft>
							<mutators>
								<mutator>ImportQualifiedTokens</mutator>
								<mutator>OptionalMapIdentity</mutator>
								<mutator>PMDMutators</mutator>
								<mutator>SafeAndConsensual</mutator>
								<mutator>SafeButNotConsensual</mutator>
								<mutator>SimplifyBooleanInitialization</mutator>
								<mutator>SonarMutators</mutator>
								<mutator>StreamMapIdentity</mutator>
							</mutators>
							<excludedMutators>
								<mutator>AvoidInlineConditionals</mutator>
								<mutator>CastMathOperandBeforeAssignement</mutator>
								<mutator>LocalVariableTypeInference</mutator>
								<mutator>SimplifyStartsWith</mutator>
								<mutator>UseTextBlocks</mutator>
							</excludedMutators>
						</cleanthat>
					</java>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.8.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.8</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>format</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>com.diffplug.spotless</groupId>
						<artifactId>spotless-maven-plugin</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>apply</goal>
								</goals>
								<phase>process-sources</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>verify-format</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.diffplug.spotless</groupId>
						<artifactId>spotless-maven-plugin</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
